force-app/main/default/objects/Outbound_Transaction__c/Outbound_Transaction__c.object-meta.xml
<CustomObject>
    <label>Outbound Transaction</label>
    <nameField>
        <displayFormat>OT-{0000}</displayFormat>
        <label>Outbound Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outbound Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>