force-app/main/default/objects/Outbound_Transaction__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>6</scale>
</CustomField>