force-app/main/default/objects/Outbound_Transaction__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <label>Approved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Approved</fullName>
                <default>true</default>
                <label>Not Approved</label>
            </value>
            <value>
                <fullName>Approval Requested</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 