force-app/main/default/objects/Outbound_Transaction__c/fields/Change_Address__c.field-meta.xml
<CustomField>
    <fullName>Change_Address__c</fullName>
    <label>Change Address</label>
    <type>Text</type>
    <length>255</length>
</CustomField> 