force-app/main/default/objects/Outbound_Transaction__c/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <label>Fee</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>6</scale>
</CustomField>