force-app/main/default/objects/Outbound_Transaction__c/fields/Inputs__c.field-meta.xml
<CustomField>
    <fullName>Inputs__c</fullName>
    <label>Inputs</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>