force-app/main/default/objects/Outbound_Transaction__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <description>Memo text to be included in the Cardano transaction metadata</description>
    <label>Memo</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 