force-app/main/default/objects/Outbound_Transaction__c/fields/Outputs__c.field-meta.xml
<CustomField>
    <fullName>Outputs__c</fullName>
    <label>Outputs</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>