force-app/main/default/objects/Outbound_Transaction__c/fields/Protocol_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Parameters__c</fullName>
    <label>Protocol Parameters</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>