force-app/main/default/objects/Outbound_Transaction__c/fields/Recipient_Address__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Address__c</fullName>
    <label>Recipient Address</label>
    <type>Text</type>
    <length>255</length>
</CustomField>