force-app/main/default/objects/Outbound_Transaction__c/fields/Signed_Transaction_CBOR__c.field-meta.xml
<CustomField>
    <fullName>Signed_Transaction_CBOR__c</fullName>
    <label>Signed Transaction CBOR</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>Signed transaction in CBOR (Concise Binary Object Representation) format that is sent to Blockfrost API</description>
</CustomField> 