force-app/main/default/objects/Outbound_Transaction__c/fields/Transaction_Data__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Data__c</fullName>
    <label>Transaction Data</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>