force-app/main/default/objects/Outbound_Transaction__c/fields/Transaction_Hash__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Hash__c</fullName>
    <description>Blockchain transaction hash returned after the transaction is successfully sent to the network</description>
    <label>Transaction Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>