force-app/main/default/objects/Outbound_Transaction__c/fields/Transaction_Submitted_At__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Submitted_At__c</fullName>
    <label>Transaction Submitted At</label>
    <type>DateTime</type>
</CustomField> 