force-app/main/default/objects/Outbound_Transaction__c/fields/Wallet__c.field-meta.xml
<CustomField>
    <fullName>Wallet__c</fullName>
    <label>Wallet</label>
    <referenceTo>Wallet__c</referenceTo>
    <relationshipLabel>Outbound Transactions</relationshipLabel>
    <relationshipName>Outbound_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>