force-app/main/default/objects/Outbound_Transaction__c/validationRules/CBOR_Required_For_Submission.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description>Ensures that signed transaction CBOR is available when transaction is ready to send and approved</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Transaction_Status__c, 'Ready to send'),
    ISPICKVAL(Approved__c, 'Approved'),
    ISBLANK(Signed_Transaction_CBOR__c)
)</errorConditionFormula>
    <errorDisplayField>Transaction_Status__c</errorDisplayField>
    <errorMessage>Transaction submission requires signed CBOR. Please rebuild and sign the transaction first.</errorMessage>
    <fullName>CBOR_Required_For_Submission</fullName>
</ValidationRule> 