force-app/main/default/objects/Outbound_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Wallet__c</columns>
    <columns>Transaction_Status__c</columns>
    <columns>Approved__c</columns>
    <columns>Memo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>