force-app/main/default/objects/Outbound_Transaction__c/listViews/Sent_Transactions.listView-meta.xml
<ListView>
    <fullName>Sent_Transactions</fullName>
    <columns>NAME</columns>
    <columns>Wallet__c</columns>
    <columns>Transaction_Status__c</columns>
    <columns>Approved__c</columns>
    <columns>Transaction_Hash__c</columns>
    <columns>Memo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Transaction_Status__c</field>
        <operation>equals</operation>
        <value>Sent</value>
    </filters>
    <filters>
        <field>Transaction_Hash__c</field>
        <operation>notEqual</operation>
        <value></value>
    </filters>
    <label>Sent Transactions</label>
</ListView>