force-app/main/default/objects/Outbound_Transaction__c/listViews/Signed_Transactions.listView-meta.xml
<ListView>
    <fullName>Signed_Transactions</fullName>
    <columns>NAME</columns>
    <columns>Wallet__c</columns>
    <columns>Transaction_Status__c</columns>
    <columns>Signed_Transaction_CBOR__c</columns>
    <columns>Memo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Transaction_Status__c</field>
        <operation>equals</operation>
        <value>Ready to Send</value>
    </filters>
    <filters>
        <field>Signed_Transaction_CBOR__c</field>
        <operation>notEqual</operation>
        <value></value>
    </filters>
    <label>Signed Transactions</label>
</ListView>